--- a/chatbot.css
+++ b/chatbot.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Permanent+Marker&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+/*general styling*/
 *{
   margin: 0;
   padding: 0;
@@ -17,7 +18,7 @@ body{
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
-   width: 450PX;
+   width: 500PX;
    background: #fff;
    border-radius: 10px; 
    box-shadow: 0 0 128px rgba(0,0,0,0.1) 
@@ -62,18 +63,24 @@ body{
 }
 
 .chatbox .chat p{
+  white-space: pre-wrap; 
  background:#1E4BAE;
  padding: 12px 16px;
  border-radius: 15px 15px 0 15px;
  color: #fff;
  font-size: 0.95rem;
  max-width: 75%;
+
 }
 
 .chatbox .incoming p{
   color: black;
-  background: #f2f2f2;
+  background: #e5e4e4;
   border-radius: 15px 15px 15px 0;
+}
+/* separate incoming messages */
+.chatbox .incoming:not(:last-child) {
+  margin-bottom: 5px;
 }
 
 .chatbox .outgoing{
@@ -82,7 +89,7 @@ body{
 }
 
 .chatbox .outgoing span{
-  height: 32px;
+  height: 32PX;
   width: 32px;
   color: #fff;
   background: #1E4BAE;
